# course-management

./: .bowerrc  .gitignore  .gitmodules  .travis.yml  Dockerfile  Gruntfile.coffee  LICENSE  Makefile  OVERVIEW.md  README.md  bower.json  docker-compose.yaml  flake.nix  init.py  init.sh  install.sh  manage.py  module.nix  package.json  pyproject.toml  requirements.txt  secret_key
.github/workflows/: ci.yml
course/: admin.py  forms.py  settings.py  settings.py.example  urls.py  wsgi.py
course-management/: manage.py
course-management/course/: admin.py  forms.py  settings.py.example  translation.py  urls.py
course-management/user/: forms.py  models.py
course-management/util/: html_clean.py
course/fixtures/: courses.yaml
course/migrations/: 0001_initial.py  0002_auto_20160406_1024.py  0003_auto_20160408_1247.py  0004_auto_20160409_2159.py  0005_auto_20160622_2313.py  0006_fix_integrity_del_courses.py  0007_auto_20171012_0838.py  0008_news.py  0009_course_visible.py  0010_description.py  0011_remove_course_student_only.py  0012_auto_20191108_1447.py  0013_course_participants.py  0014_auto_20200906_1739.py  0015_delete_description.py
course/models/: course.py  desc.py  news.py  schedule.py  subject.py
course/templates/: base-shell.html  base.html  course_list.html  index.html  privacy-policy.html  (+1 more)
polls/: forms.py  models.py  urls.py
re_captcha/: decorators.py
res/: registrationmail.txt
sass/: style.sass
scss/: style.sass  style.scss
src/: db.sqlite3  manage.py
test/: dependency_test.py
user/: forms.py  models.py  urls.py
util/: html_clean.py  routing.py
(+291 files in other folders)
