[tool.poetry]
name = "course-management"
version = "0.1.0"
description = ""
authors = []
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "course-management"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
pyyaml = "^6.0.2"
bleach = "^6.1.0"
django-modeltranslation = "^0.19.9"
markdown = "^3.7"
django-guardian = "^2.4.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
